--- a/templates/explore.html
+++ b/templates/explore.html
@@ -23,8 +23,8 @@
     <nav>
         <ul>
             <li><a>Explore</a></li>
-            <li><a href="Input_page.html">Add Item</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="http://127.0.0.1:5000/form">Add Item</a></li>
+            <li><a href="http://127.0.0.1:5000/about">About Us</a></li>
     </nav>    
     </div>
     <h2>DETAILS:</h2>
