--- a/static/style1.css
+++ b/static/style1.css
@@ -31,3 +31,24 @@ nav ul li{
     padding-left: 2rem;
     list-style-type: none;
 }
+
+.zui-table {
+    border: solid 1px #DDEEEE;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font: normal 13px Arial, sans-serif;
+}
+.zui-table thead th {
+    background-color: #DDEFEF;
+    border: solid 1px #DDEEEE;
+    color: #336B6B;
+    padding: 10px;
+    text-align: left;
+    
+}
+.zui-table tbody td {
+    border: solid 1px #DDEEEE;
+    color: whitesmoke;
+    padding: 10px;
+    
+}
