--- a/templates/explore.html
+++ b/templates/explore.html
@@ -26,7 +26,7 @@
             <li><a href="http://127.0.0.1:5000/form">Add Item</a></li>
             <li><a href="http://127.0.0.1:5000/about">About Us</a></li>
     </nav>    
-  <img id="imge" src="/assets/head.jpg"></img>  
+    <img id='imge' src="{{url_for('static', filename='1.jpg')}}" />
   </div>
     <p id="brief">This webpage serves as a community for college students who know that sharing is caring.
       There are times when we are in no use of some things , such things could be put to good use by others so why not share them?? Below is the table that shows , things up for sharing . You may want to add items to share through add item. </p>
