--- a/templates/form.html
+++ b/templates/form.html
@@ -44,7 +44,8 @@
                 <input name="details" placeholder="Details" type="text" tabindex="5" required></input>
             </fieldset>
             <fieldset>
-                <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"><a href="http://127.0.0.1:5000/">Submit</a></button>
+                <button name="submit" type="submit" id="contact-submit" data-submit="...Sending" style="color: white;">Submit</button>
+                <a href="http://127.0.0.1:5000/">Back</a>
             </fieldset>
         </form>
     </div>
